--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 
 <body>
 
+    <!-- Home page  -->
+
+
+<!-- <section id="Home"> -->
 <div class="hero-image">
   <div class="hero-text">
     <h1 style="font-size:50px">Explore the world, expand your soul.</h1>
@@ -14,6 +18,34 @@
     <button>Hire me</button>
   </div>
 </div>
+<!-- </section> -->
+
+    <!-- Package -->
+
+<section id="Package">
+
+</section>
+
+
+
+    <!-- Testimonials -->
+<section id="Testimonials">
+
+</section>
+
+
+    <!-- Exploring -->
+<section id="Exploring">
+
+</section>
+
+
+    <!-- Footer -->
+<section id="footer">
+
+</section>
+
+
 
 </body>
 </html>
