--- a/index.html
+++ b/index.html
@@ -8,41 +8,43 @@
     <link rel="stylesheet" href="style.css">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <section id="title">
         <div class="container-fluid">
-            <nav class="navbar navbar-expand-lg navbar fixed-top navbar-expand-lg navbar-dark p-md-3" style="padding-left: 60px; padding-right: 60px; padding-bottom: 50px;">            
-            <a class="navbar-brand" href="#" style="font-size: 2em;">tRAVEL</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"></button>
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="">Packaged</a>
-                    </li>		
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">About us</a>
-                    </li>	
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Contact us</a>
-                    </li>		
-                </ul>
-            </div>
+
+            <nav class="navbar navbar-expand-lg navbar-light" style="padding-left: 60px; padding-right: 60px; padding-bottom: 40px;padding-top: 35px;">
+                <a class="navbar-brand" href="#" style="font-size: 2em; font-weight: bolder;">tRAVEL</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="">Packages</a>
+                        </li>		
+                        <li class="nav-item">
+                            <a class="nav-link" href="">About us</a>
+                        </li>	
+                        <li class="nav-item">
+                            <a class="nav-link" href="">Contact</a>
+                        </li>		
+                    </ul>		  
+                </div>
             </nav>
       
-    <div class="row ">
-    <div class="col-lg-6">
-        <h1 class="big-heading">Explore the world, expand your soul.</h1>
-        <p class="heading-para">get connect us with to Explore the world</p>
-        <button class="btn btn-outline-warning btn-title">Book Now!</button>
-    </div>
+            <div class="row ">
+              <div class="col-lg-6">
+                <h1 class="big-heading">Explore the world, expand your soul.</h1>
+                <p class="heading-para">get connect us with to Explore the world</p>
+                <button class="btn btn-outline-warning btn-title">Book Now!</button>
+              </div>
+            </div>
         </div>
     </section>
 
