--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <section id="title">
         <div class="container-fluid">
 
-            <nav class="navbar navbar-expand-lg navbar-light" style="padding-left: 60px; padding-right: 60px; padding-bottom: 40px;padding-top: 35px;">
+            <nav class="navbar navbar-expand-lg navbar-light navbar-static-top" style="padding-left: 60px; padding-right: 60px; padding-bottom: 40px;padding-top: 35px;">
                 <a class="navbar-brand" href="#" style="font-size: 2em; font-weight: bolder;">tRAVEL</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
